--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     
 </div>
 
-<script src="">
-    
-</script>
+<script src="https://dom1-uralbek.netlify.app/index.js"></script>
 
 </body>
 </html>
