--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 <div id="index">
-    
+    <button type="button" onclick="loadDoc()">Change Content</button>
 </div>
 
 <script src="https://dom1-uralbek.netlify.app/index.js"></script>
