--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
 <title>Uralbek Dom 1</title>
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
-
+ajax
 <div id="index">
     <button type="button" onclick="loadDoc()">Change Content</button>
 </div>
+
+XML dom
+
+
+
 
 <script src="https://dom1-uralbek.netlify.app/index.js"></script>
 
