--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 ajax
 <div id="index">
     <button type="button" onclick="loadDoc()">Change Content</button>
-</div>
+</div><br /><br />
 
 XML dom
-
+<div id="">
+    
+</div>
 
 
 
